--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "초기 세팅",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --watch"
   },
   "keywords": [],
   "author": "",
